      new duplicate entries to /etc/ld.so.conf for directories already
      specified in /etc/ld.so.conf.d/*.conf files. (CNY-2432)

  o Build Changes:
    * Superclasses are now loaded from the filesystem. Superclasses
      can now be cooked. Doing so will make a changeset that installs
      the recipe itself on the filesystem. (CNY-983)

Changes in 1.2.12:
  o Client Changes:
    * A getDatabase() method has been added to the ConaryClient class.
      This method returns the local system database object. Code that
      needs to query the local system database should use this method
      to obtain the database object. (CNY-2316)

  o Build Changes:
    * Spaces in URLs are now automatically escaped. (CNY-2389)
    * The Requires() policy now inspects Lib: and Lib.private:
      pkg-config keywords in .pc files to find library files, and
      where it finds them, it adds appropriate Conary trove
      requirements to the .pc files. (CNY-2370)
  o Bug Fixes:
    * The PackageSpec documentation incorrectly stated that you could
      pass both package and component information to it; this has
      been corrected to properly redirect to ComponentSpec for this
      usage. (CNY-2387)
    * An update bug that could result in a trove integrity error has
      been fixed. The issue would occur when updating packages where,
      for some files, the only changes are to file versions. (CNY-2403)

Changes in 1.2.11:
  o Client Changes:
    * The error message printed when Conary encounters an unhandled
      exception has been changed to reflect the fact that the common
      case is merely poor handling of the error condition, rather than
      another bug.  It has also been reformatted to display better in
      rITS. (CNY-2265)
    * The "conary-debug" script that collects information to help
      debug a crash has been enhanced to include the recently-added
      manifest file. (CNY-2338)

  o Build Changes: